      function Commit(Force: boolean=false): TTrCompletionState;
      function Rollback(Force: boolean=false): TTrCompletionState;

    Specifically, this is to allow the functions to report back a failed commit or
    rollback when Force = true. In the case, the transaction handle has been
    released, while the transaction remains in limbo.

17. IAttachment ExecImmediate, ExecuteSQL and OpenCursorAtStart.
    When the transaction parameters are provided as an array of const and the
    statement fails, the transaction is rolledback (forced) before the exception
    is raised.



FBINTF Change Log  version          (1.3-3 Build 12935) Mon, 06 Dec 2021 23:17:13 +0000

1. Fix compile error with fpc trunk (3.3.1 and later), due to type change to tzname in "unix" unit.

2. Remove constraint in IAttachment.HasScollableCursors that returned false when
   using remote protocol. Scrollable cursors with remote database expected to
   be support for Firebird 4.0.1 onwards. Note: Firebird 4.0.0 will return
   a not supported error.

3. IStatement: new function;
    TStatementFlag = (stHasCursor,stRepeatExecute,stScrollable);
    TStatementFlags = set of TStatementFlag;
    function GetFlags: TStatementFlags;

4. Revised behaviour for IStatement.ExecuteQuery in order to preserve backwards
   compatibility.
   In Firebird 5, Update..Returning may returns multiple rows and hence the statemen
   type changes from ExecProcedure to Select. So that ExecuteQuery can continue
   to be used with Update...Retruning statements that return a singleton row,
   instead of raising an exception when ExecuteQuery is used with a (SELECT) statement,
   it will open the cursor and return the first row only.

5. ITransaction: new functions:
    function GetIsReadOnly: boolean;
    function GetTransactionID: integer;
    function GetTrInformation(Requests: array of byte): ITrInformation; overload;
    function GetTrInformation(Request: byte): ITrInformation; overload;
