@@ -25,7 +25,7 @@
     </PublishOptions>
     <RunParams>
       <local>
-        <CommandLineParams Value="-t 22"/>
+        <CommandLineParams Value="-t 10"/>
       </local>
       <environment>
         <UserOverrides Count="3">
@@ -38,7 +38,7 @@
       <Modes Count="1">
         <Mode0 Name="default">
           <local>
-            <CommandLineParams Value="-t 22"/>
+            <CommandLineParams Value="-t 10"/>
           </local>
           <environment>
             <UserOverrides Count="3">
