@@ -207,7 +207,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="132"/>
         <CursorPos Y="143"/>
-        <UsageCount Value="110"/>
+        <UsageCount Value="111"/>
       </Unit25>
       <Unit26>
         <Filename Value="TestManager.pas"/>
@@ -221,7 +221,7 @@
         <EditorIndex Value="1"/>
         <TopLine Value="398"/>
         <CursorPos Y="412"/>
-        <UsageCount Value="75"/>
+        <UsageCount Value="76"/>
         <Loaded Value="True"/>
       </Unit27>
       <Unit28>
@@ -233,7 +233,7 @@
       </Unit28>
       <Unit29>
         <Filename Value="../client/FBSQLData.pas"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="83"/>
         <CursorPos X="4" Y="90"/>
         <ExtraEditorCount Value="1"/>
@@ -242,7 +242,7 @@
           <TopLine Value="3085"/>
           <CursorPos Y="3099"/>
         </ExtraEditor1>
-        <UsageCount Value="29"/>
+        <UsageCount Value="30"/>
         <Loaded Value="True"/>
       </Unit29>
       <Unit30>
@@ -274,16 +274,17 @@
       </Unit32>
       <Unit33>
         <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="426"/>
-        <CursorPos Y="442"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="405"/>
+        <CursorPos X="19" Y="409"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
-          <TopLine Value="606"/>
-          <CursorPos X="52" Y="615"/>
+          <TopLine Value="298"/>
+          <CursorPos X="42" Y="272"/>
         </ExtraEditor1>
-        <UsageCount Value="58"/>
+        <UsageCount Value="59"/>
+        <Loaded Value="True"/>
       </Unit33>
       <Unit34>
         <Filename Value="../client/2.5/FB25ClientAPI.pas"/>
@@ -301,9 +302,8 @@
       </Unit35>
       <Unit36>
         <Filename Value="../client/FBAttachment.pas"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="3"/>
-        <TopLine Value="1178"/>
+        <TopLine Value="1224"/>
         <CursorPos Y="1250"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
@@ -311,7 +311,7 @@
           <TopLine Value="830"/>
           <CursorPos X="22" Y="841"/>
         </ExtraEditor1>
-        <UsageCount Value="39"/>
+        <UsageCount Value="40"/>
         <Loaded Value="True"/>
       </Unit36>
       <Unit37>
@@ -370,8 +370,7 @@
       <Unit44>
         <Filename Value="../client/3.0/FB30Attachment.pas"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="309"/>
-        <CursorPos Y="325"/>
+        <TopLine Value="103"/>
         <UsageCount Value="20"/>
       </Unit44>
       <Unit45>
@@ -386,7 +385,7 @@
         <EditorIndex Value="6"/>
         <TopLine Value="127"/>
         <CursorPos X="3" Y="141"/>
-        <UsageCount Value="15"/>
+        <UsageCount Value="16"/>
         <Loaded Value="True"/>
       </Unit46>
       <Unit47>
@@ -405,10 +404,11 @@
       </Unit48>
       <Unit49>
         <Filename Value="../client/3.0/FB30Events.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="257"/>
+        <EditorIndex Value="8"/>
+        <TopLine Value="304"/>
         <CursorPos Y="321"/>
         <UsageCount Value="15"/>
+        <Loaded Value="True"/>
       </Unit49>
       <Unit50>
         <Filename Value="../client/3.0/FB30Blob.pas"/>
@@ -426,10 +426,11 @@
       </Unit51>
       <Unit52>
         <Filename Value="../client/3.0/FB30Array.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="302"/>
+        <EditorIndex Value="9"/>
+        <TopLine Value="301"/>
         <CursorPos X="1024" Y="327"/>
         <UsageCount Value="12"/>
+        <Loaded Value="True"/>
       </Unit52>
       <Unit53>
         <Filename Value="../client/2.5/FB25Array.pas"/>
@@ -481,24 +482,27 @@
       </Unit58>
       <Unit59>
         <Filename Value="../changelog"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="74"/>
-        <CursorPos X="71" Y="99"/>
-        <UsageCount Value="35"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="4"/>
+        <TopLine Value="80"/>
+        <CursorPos X="38" Y="104"/>
+        <UsageCount Value="36"/>
+        <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="None"/>
       </Unit59>
       <Unit60>
         <Filename Value="../client/3.0/firebird/Firebird.pas"/>
-        <EditorIndex Value="-1"/>
-        <TopLine Value="1151"/>
-        <CursorPos X="9" Y="1164"/>
+        <EditorIndex Value="10"/>
+        <TopLine Value="3676"/>
+        <CursorPos Y="3689"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="-1"/>
           <TopLine Value="4686"/>
           <CursorPos Y="4689"/>
         </ExtraEditor1>
-        <UsageCount Value="95"/>
+        <UsageCount Value="96"/>
+        <Loaded Value="True"/>
       </Unit60>
       <Unit61>
         <Filename Value="../../fbintf.fb4/changelog"/>
@@ -609,11 +613,10 @@
       </Unit75>
       <Unit76>
         <Filename Value="../client/3.0/FB30TimeZoneServices.pas"/>
-        <EditorIndex Value="4"/>
+        <EditorIndex Value="-1"/>
         <TopLine Value="88"/>
         <CursorPos X="99" Y="56"/>
         <UsageCount Value="10"/>
-        <Loaded Value="True"/>
       </Unit76>
       <Unit77>
         <Filename Value="../../../../fpcsrc/3.2.0/rtl/inc/generic.inc"/>
@@ -1016,9 +1019,9 @@
       </Unit131>
       <Unit132>
         <Filename Value="../client/IB.pas"/>
-        <TopLine Value="560"/>
-        <CursorPos X="3" Y="561"/>
-        <UsageCount Value="22"/>
+        <TopLine Value="310"/>
+        <CursorPos X="3" Y="323"/>
+        <UsageCount Value="23"/>
         <Loaded Value="True"/>
       </Unit132>
       <Unit133>
@@ -1050,9 +1053,9 @@
       <Unit137>
         <Filename Value="../client/IBUtils.pas"/>
         <EditorIndex Value="5"/>
-        <TopLine Value="1954"/>
+        <TopLine Value="1919"/>
         <CursorPos X="11" Y="1919"/>
-        <UsageCount Value="11"/>
+        <UsageCount Value="12"/>
         <Loaded Value="True"/>
       </Unit137>
       <Unit138>
@@ -1065,124 +1068,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="317" TopLine="305"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="90" Column="21" TopLine="75"/>
       </Position1>
       <Position2>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="319" TopLine="306"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="439" Column="3" TopLine="427"/>
       </Position2>
       <Position3>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="325" TopLine="306"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="94" Column="17" TopLine="79"/>
       </Position3>
       <Position4>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="327" TopLine="306"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="459" Column="29" TopLine="456"/>
       </Position4>
       <Position5>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="428" TopLine="415"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="94" Column="14" TopLine="82"/>
       </Position5>
       <Position6>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="429" TopLine="415"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="459" Column="46" TopLine="456"/>
       </Position6>
       <Position7>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="431" TopLine="415"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="109" Column="21" TopLine="85"/>
       </Position7>
       <Position8>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="434" TopLine="415"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="490" Column="29" TopLine="487"/>
       </Position8>
       <Position9>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="435" TopLine="415"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="92" Column="23" TopLine="84"/>
       </Position9>
       <Position10>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="436" TopLine="415"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="451" TopLine="448"/>
       </Position10>
       <Position11>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="437" TopLine="416"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="84" TopLine="81"/>
       </Position11>
       <Position12>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="438" TopLine="417"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="342" Column="28" TopLine="330"/>
       </Position12>
       <Position13>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="436" TopLine="417"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="408" TopLine="395"/>
       </Position13>
       <Position14>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="441" Column="13" TopLine="420"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="459" Column="23" TopLine="446"/>
       </Position14>
       <Position15>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="316" Column="45" TopLine="310"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="479" Column="46" TopLine="466"/>
       </Position15>
       <Position16>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="116" Column="20" TopLine="108"/>
+        <Filename Value="../client/3.0/FB30Array.pas"/>
+        <Caret Line="327" Column="1024" TopLine="301"/>
       </Position16>
       <Position17>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="344" Column="3" TopLine="339"/>
+        <Filename Value="../client/3.0/firebird/Firebird.pas"/>
+        <Caret Line="3689" TopLine="3676"/>
       </Position17>
       <Position18>
-        <Filename Value="../client/FBTransaction.pas"/>
-        <Caret Line="125" Column="14" TopLine="103"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="272" Column="54" TopLine="261"/>
       </Position18>
       <Position19>
-        <Filename Value="../client/3.0/FB30TimeZoneServices.pas"/>
-        <Caret Line="170" Column="24" TopLine="155"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="342" Column="19" TopLine="329"/>
       </Position19>
       <Position20>
-        <Filename Value="../client/3.0/FB30TimeZoneServices.pas"/>
-        <Caret Line="948" Column="3" TopLine="895"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="343" Column="21" TopLine="329"/>
       </Position20>
       <Position21>
-        <Filename Value="../client/3.0/FB30TimeZoneServices.pas"/>
-        <Caret Line="56" Column="99" TopLine="40"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="840" Column="27" TopLine="817"/>
       </Position21>
       <Position22>
-        <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="2893" Column="50" TopLine="2882"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="86" Column="17" TopLine="73"/>
       </Position22>
       <Position23>
-        <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="1963" Column="10" TopLine="1950"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="454" Column="47" TopLine="435"/>
       </Position23>
       <Position24>
-        <Filename Value="../client/IBUtils.pas"/>
-        <Caret Line="1975" Column="10" TopLine="1962"/>
+        <Filename Value="../client/3.0/firebird/Firebird.pas"/>
+        <Caret Line="3689" TopLine="3676"/>
       </Position24>
       <Position25>
-        <Filename Value="../client/IB.pas"/>
-        <Caret Line="975" Column="93" TopLine="966"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="455" TopLine="435"/>
       </Position25>
       <Position26>
-        <Filename Value="../client/IB.pas"/>
-        <Caret Line="561" Column="3" TopLine="560"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="305" TopLine="292"/>
       </Position26>
       <Position27>
-        <Filename Value="../client/FBClientAPI.pas"/>
-        <Caret Line="412" TopLine="398"/>
+        <Filename Value="../client/3.0/firebird/Firebird.pas"/>
+        <Caret Line="3689" TopLine="3676"/>
       </Position27>
       <Position28>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="213" Column="27" TopLine="192"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="298" Column="28" TopLine="292"/>
       </Position28>
       <Position29>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="1240" Column="3" TopLine="1235"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="306" Column="48" TopLine="292"/>
       </Position29>
       <Position30>
-        <Filename Value="../client/FBAttachment.pas"/>
-        <Caret Line="213" Column="14" TopLine="202"/>
+        <Filename Value="../client/3.0/FB30ClientAPI.pas"/>
+        <Caret Line="96" Column="23" TopLine="77"/>
       </Position30>
     </JumpHistory>
     <RunParams>
@@ -1194,10 +1197,10 @@
         <Item1 Value="/usr/bin/xterm -T &apos;Lazarus Run Output&apos; -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
       </List0>
       <List1 Name="CommandLineParameters" Count="15">
-        <Item1 Value="-t 22"/>
-        <Item2 Value="-t 21"/>
-        <Item3 Value="-t 7"/>
-        <Item4 Value="-t 10"/>
+        <Item1 Value="-t 10"/>
+        <Item2 Value="-t 22"/>
+        <Item3 Value="-t 21"/>
+        <Item4 Value="-t 7"/>
         <Item5 Value="-t 19"/>
         <Item6 Value="-t 2"/>
         <Item7 Value="-t 1"/>
@@ -1210,7 +1213,6 @@
         <Item14 Value="-t 5"/>
         <Item15 Value="-t 17"/>
       </List1>
-      <List2 Name="WorkingDirectory" Type="File" Count="1"/>
     </HistoryLists>
   </ProjectSession>
 </CONFIG>
