@@ -94,10 +94,14 @@ FBINTF Change Log  version          (1.4-0 Build 13107) Wed, 19 Jan 2022 12:08:2
     rollback when Force = true. In the case, the transaction handle has been
     released, while the transaction remains in limbo.
 
-17. IAttachment ExecImmediate, ExecuteSQL and OpenCursorAtStart.
+17. IAttachment ExecImmediate.
     When the transaction parameters are provided as an array of const and the
     statement fails, the transaction is rolledback (forced) before the exception
     is raised.
+
+18. In Firebird 3 and later API: the status vector is now a thread var, as was
+    already the case with the legacy API. Avoids problems when calling underlying
+    Firebird API in multiple threads.
 
 
 
